# face_recognition_android

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/summer/facedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: facedlib.cpp
app/src/main/cpp/dlib/: CMakeLists.txt
app/src/main/cpp/dlib/cmake_utils/: find_blas.cmake
app/src/main/cpp/dlib/gui_core/: gui_core_kernel_1.h  gui_core_kernel_2.cpp
app/src/main/java/com/anloq/activity/: AdActivity1.java
app/src/main/java/com/anloq/application/: MyApplication.java
app/src/main/java/com/anloq/bean/: FaceQ2.java
app/src/main/java/com/anloq/copydatfile/listener/: OnFileInitializeListener.java
app/src/main/java/com/anloq/runnable/: CopyFileCallable.java  Q2ConsumerRunnable.java
app/src/main/java/com/anloq/utils/: CustomCamera.java  DlibFaceNativeMethodUtils.java  MyMediaManager.java  OpenDoorInterface.java  Preview.java
app/src/main/jniLibs/include/dlib/: serialize.h  stl_tostring.h
app/src/main/jniLibs/include/dlib/cuda/: cuda_utils.h
app/src/main/jniLibs/include/dlib/dnn/: core.h  loss.h
app/src/main/jniLibs/include/dlib/geometry/: point_transforms.h  rectangle.h
app/src/main/jniLibs/include/dlib/gui_core/: gui_core_kernel_1.h
app/src/main/jniLibs/include/dlib/image_transforms/: interpolation.h  interpolation_abstract.h
app/src/main/jniLibs/include/dlib/python/: numpy_image.h
app/src/main/jniLibs/include/dlib/random_forest/: random_forest_regression.h
app/src/main/jniLibs/include/dlib/statistics/: running_gradient.h
app/src/main/res/layout/: activity_ad1.xml
(+7 files in other folders)
